edit to picture path and uploading of images

--- a/img_pro_ass1_2.ipynb
+++ b/img_pro_ass1_2.ipynb
@@ -27,10 +27,7 @@
         "5) Morphological closing operation <br>\n",
         "6) Morphological opening operation <br>\n",
         "7) Find the largest object of connect components<br>\n",
-        "8) get the area of interest<br>\n",
-        "9) edge detection (canny)<br>\n",
-        "10) hough transform <br>\n",
-        "11) determine the pupil center"
+        "8) determine the pupil size "
       ]
     },
     {
@@ -78,7 +75,7 @@
         "colab": {}
       },
       "source": [
-        "img = cv2.imread(\"/content/drive/My Drive/YOLO/rnf1_3.jpg\",  cv2.IMREAD_GRAYSCALE)\n",
+        "img = cv2.imread(\"rnf1_3.jpg\",  cv2.IMREAD_GRAYSCALE)\n",
         "img2 = cv2.medianBlur(img,5)\n",
         "cimg = cv2.cvtColor(img,cv2.COLOR_GRAY2BGR)"
       ],
